--- a/oligo_analysis.Rmd
+++ b/oligo_analysis.Rmd
@@ -103,7 +103,7 @@ consensus_cutoff <- 10
 # Create table of sample directory paths
 # First define the directory containing UMIErrrorCorrect output files, normally this will be the same as main
 #sample_dir = main 
-sample_dir = paste(main, 'test_data_v2', sep = '')
+sample_dir = paste(main, 'data/umierrorcorrect', sep = '')
 
 # Get full paths for each sample folder
 samplePaths <- list.dirs(
@@ -256,6 +256,9 @@ for(j in 1:nrow(cons.table.filtered)) {
 ```
 
 ### Mean deletions & substitutions error
+
+Calculate the mean deletion and substitution error grouped by Manufacturer,
+InsertType, Purification, Batch and Consensus group size.
 
 ```{r}
 print(
